<resources>
    <string name="app_name">Movies App</string>
    <string name="lista_de_filmes">Lista de Filmes</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="textview">TextView</string>
    <string name="book_title">Book Title</string>
    <string name="todo">TODO</string>
    <string name="filme">Filme</string>
    <string name="titulo">Titulo</string>
    <string name="posterfilm" />
    <string name="film_title" />
    <string name="year" />
    <string name="rated" />
    <string name="genero">Genero</string>
    <string name="resumo">Resumo</string>
    <string name="ano">Ano</string>
    <string name="avaliacao">Avaliacao</string>
    <string name="lancamento">Lancamento</string>
    <string name="checkbox">CheckBox</string>
    <string name="duracao">Duracao</string>
    <string name="diretor">Diretor</string>
    <string name="lingua">Lingua</string>
    <string name="favoritos">Favoritos</string>
    <string name="listar">Listar</string>
    <string name="favorito">Favorito</string>
    <string name="linguagem">Linguagem</string>
    <string name="pais">Pais</string>
</resources>
