<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main4Activity"
    android:background="#fff">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ablID"
        android:layout_width="match_parent"
        android:layout_height="355dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ctlID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:title="Titulo">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"></androidx.appcompat.widget.Toolbar>

            <CheckBox
                android:id="@+id/idFavoritos"
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:text="@string/favorito" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="278dp"
                android:orientation="horizontal"
                android:padding="50dp">

                <ImageView
                    android:id="@+id/m_ivID"
                    android:layout_width="100dp"
                    android:layout_height="219dp"
                    android:contentDescription="@string/todo" />

                <LinearLayout
                    android:layout_width="247dp"
                    android:layout_height="219dp"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/m_tvTitulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titulo"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/m_tvAno"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/ano"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/m_tvGenero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/genero"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/m_tvAvaliacao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/avaliacao"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/m_tvLancamento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/lancamento"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/m_tvDuracao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/duracao"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/m_tvDiretor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/diretor"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/m_tvLinguagem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/linguagem"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/m_tvPais"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/pais"
                        android:textColor="#000000" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/aa_tvResumo"/>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>